# birthdayfeed

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  Procfile  README.md  app.yaml  birthdayfeed.atom  birthdayfeed.atom.py  birthdayfeed.ics  birthdayfeed.ics.py  birthdayfeed.py  compose.yaml  dependabot.py  docker-compose.yaml  docker-compose.yml  fly.toml  pyproject.toml  requirements-docker.txt  requirements.in  requirements.txt  run.py  setup.py
.github/: dependabot.yaml
.github/workflows/: build-and-deploy.yaml  build-container-image.yaml  build-latest-container-image.yaml  build-release-container-image.yaml  build.yaml  deploy-to-fly.yaml  fly-migrate-to-v2.yaml  pip-compile-upgrade.yaml  ruff.yaml
birthdayfeed/: app.py  birthdayfeed.py  config.py  lang.py
birthdayfeed/static/: birthdayfeed.css
birthdayfeed/templates/: birthdayfeed.atom  index.html
ci/: gen-dependabot.py  gen-github-workflows.py  gen.py  ssh-deploy.sh
deploy/: fly.toml
static/: birthdayfeed.css
templates/: birthdayfeed.atom  birthdayfeed.ics  index.html
