[project]
name = "birthdayfeed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "icalendar>=6.2.0",
    "notch>=2025.2",
    "requests>=2.32.3",
    "waitress>=3.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
    "ty>=0.0.1a33",
]

[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
