[project]
name = "birthdayfeed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "icalendar>=6.3.2",
    "notch>=2026.0",
    "requests>=2.32.5",
    "waitress>=3.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.12",
    "ty>=0.0.12",
]

[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
