[project]
name = "birthdayfeed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "icalendar>=7.1.3",
    "notch>=2026.0",
    "requests>=2.34.2",
    "waitress>=3.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "ty>=0.0.51",
]

[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
